# kiro.rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  price.json
.claude/: settings.local.json
credentials/: .gitkeep
src/: lib.rs  main.rs  test.rs  token.rs
src/admin/: error_logs.rs  handlers.rs  mod.rs  router.rs  types.rs
src/anthropic/: converter.rs  handlers.rs  middleware.rs  mod.rs  router.rs  stream.rs  types.rs
src/db/: api_keys.rs  mod.rs  schema.rs  usage.rs
src/kiro/: account_pool.rs  machine_id.rs  mod.rs  provider.rs  token_manager.rs
src/kiro/model/: credentials.rs  mod.rs  token_refresh.rs  usage_limits.rs
src/kiro/model/requests/: kiro.rs
src/model/: config.rs  mod.rs  price.rs
web/: .env  .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/__tests__/: setup.ts
web/src/__tests__/mocks/: api.ts  localStorage.ts
web/src/__tests__/utils/: accountFilters.test.ts  accountSorters.test.ts
web/src/api/: index.ts
web/src/components/: Sidebar.tsx
web/src/components/accounts/: AccountCard.tsx  AccountCardGrid.tsx  AccountCompactList.tsx  AccountsFilterPanel.tsx  AccountsTable.tsx  AccountsToolbar.tsx  (+5 more)
web/src/hooks/: useAccountsMetaStorage.ts  useAccountsRemote.ts  useAccountsViewModel.ts  useCheckResultsStorage.ts  useTheme.tsx
web/src/lib/: utils.ts
web/src/pages/: Accounts.tsx  ApiKeys.tsx  Dashboard.tsx  ErrorLogs.tsx  Login.tsx  Usage.tsx
web/src/types/: account.ts  index.ts
web/src/utils/: accountFilters.ts  accountSorters.ts
(+5 files in other folders)
