[package]
name = "kiro-rs"
version = "2025.12.6"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors", "fs"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"